added more checks

--- a/video_inventory.html
+++ b/video_inventory.html
@@ -12,9 +12,9 @@
 	  <td colspan='2' align='center'> 
 	    <input type='submit' value='Add Video' onClick='addVideo()'>
 	  </td>
-	  <td>name:</td> <td> <input type='text' name='name' id='name'></td>
-	  <td>category:</td> <td> <input type='text' name='category' id='category'></td>
-	  <td>length:</td> <td> <input type='text' name='length' id='length'></td>
+	  <td>name:</td> <td> <input type='text' id='Name_id'></td>
+	  <td>category:</td> <td> <input type='text'  id='category_id'></td>
+	  <td>length:</td> <td> <input type='text'  id='length_id'></td>
 	</tr>
       </table>
 
